--- a/perceptron.ipynb
+++ b/perceptron.ipynb
@@ -2888,13 +2888,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 111,
    "id": "722234f0-c6a7-41e8-b999-38ae98a86164",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[11  0]\n",
+      " [ 0 19]]\n"
+     ]
+    }
+   ],
    "source": [
-    "print(confusion_matrix(y_test, y_pred))"
+    "print(confusion_matrix(y_test, y_pred1))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "52f2ab32-878f-4da3-8775-da2c234a1851",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
